Wireframes on curves not working #61801

Closed
opened 2019-02-21 12:54:18 +01:00 by Julien Kaspar · 7 comments
Member

Blender Version
Broken: f4d9e49f286f

Short description of error
Curves with geometry (adding depth or a bevel object) don't show wireframes anymore when toggling wireframe mode, object display settings or overlays.

**Blender Version** Broken: f4d9e49f286f **Short description of error** Curves with geometry (adding depth or a bevel object) don't show wireframes anymore when toggling wireframe mode, object display settings or overlays.
Author
Member

Added subscriber: @JulienKaspar

Added subscriber: @JulienKaspar

blender/blender#61834 was marked as duplicate of this issue

blender/blender#61834 was marked as duplicate of this issue

Added subscriber: @brecht

Added subscriber: @brecht
Clément Foucault was assigned by Brecht Van Lommel 2019-02-21 15:32:05 +01:00
Caused by blender/blender@e49d955541.

Added subscribers: @MassimilianoPuliero, @fclem

Added subscribers: @MassimilianoPuliero, @fclem

This issue was referenced by blender/blender@753e73009f

This issue was referenced by blender/blender@753e73009f7886d61aa80ae0ec56e87dd203bfe7

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: studio/blender-studio#61801
No description provided.