Fix T61801: Wireframes on curves not working